# rag-tools

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  agti-central-banks.dvc  pyproject.toml
.dvc/: config
data/: .gitignore  agti-central-banks.dvc  central_banks_g10.csv.dvc  central_banks_g10_categories.csv.dvc  central_banks_g10_links.csv.dvc  test.txt.dvc
data/sqldata/: .gitignore  central_banks_g10.csv.dvc  central_banks_g10_categories.csv.dvc  central_banks_g10_links.csv.dvc
rag_tools/: main.py  utils.py
rag_tools/parsing/: unstructured_parsing.py
